--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -103,7 +103,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8_Zulu
+platform.active=JDK_1.8_Zulu_64_bit
 project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
