--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -17,5 +17,6 @@ jobs:
       with:
         java-version: '8'
         distribution: 'zulu'
+        architecture: x86
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml -Dplatforms.JDK_1.8_Zulu.home=C:\hostedtoolcache\windows\Java_Zulu_jdk\8.0.302-8\x64 compile jar
+      run: ant -Dplatforms.JDK_1.8_Zulu.home=C:/hostedtoolcache/windows/Java_Zulu_jdk/8.0.302-8/x86 -noinput -buildfile build.xml compile jar
