--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -19,4 +19,4 @@ jobs:
         distribution: 'zulu'
         architecture: x86
     - name: Build with Ant
-      run: ant -Dplatforms.JDK_1.8_Zulu.home=C:/hostedtoolcache/windows/Java_Zulu_jdk/8.0.302-8/x86 -noinput -buildfile build.xml compile jar
+      run: ant -Dplatforms.JDK_1.8_Zulu.home=${{ env.JAVA_HOME }} -buildfile build.xml jar
