--- a/.github/workflows/BuildJar.yml
+++ b/.github/workflows/BuildJar.yml
@@ -20,4 +20,4 @@ jobs:
           architecture: x86      
 
       - name: Build with Ant
-        run: ant -Dnb.internal.action.name=rebuild clean jar
+        run: ant clean jar
