Fixed bug in saving recoded trees

--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,10 @@
 <project name="TauArgus" default="default" basedir=".">
     <description>Builds, tests, and runs the project TauArgus.</description>
     <import file="nbproject/build-impl.xml"/>
+    
+    <target name="-post-jar">
+        <copy file="${dist.jar}" todir="${basedir}"/> <!-- copy build jar file to main tauargus directory -->
+    </target>
     <!--
 
     There exist several targets which are by default empty and which can be 
