--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -120,6 +120,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-source.reference.ArgusLib.jar=D:\\TauJava2\\tauargus\\tauargus\\src
+source.reference.ArgusLib.jar=D:\\Peter-Paul\\Documents\\Thuiswerk\\Argus\\arguslibrary\\src
 src.dir=src
 test.src.dir=test
